<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/srl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <View
            android:id="@+id/v_top"
            android:layout_width="match_parent"
            android:layout_height="286dp"
            android:background="@drawable/home_banner_rounded" />

        <Space
            android:id="@+id/src_atop"
            android:layout_width="wrap_content"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/src_atop"
            android:layout_marginHorizontal="24dp"
            android:text="Good afternoon,"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_fulllname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_welcome"
            android:layout_marginHorizontal="24dp"
            android:text="Geri Abdul Malik"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/fl_notification"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@+id/src_atop"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="249dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_radius_small">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_bell_default" />
        </FrameLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fl_notification"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="30dp"
            android:elevation="1dp"
            app:cardBackgroundColor="@color/tertiary"
            app:cardCornerRadius="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="20dp"
                android:paddingVertical="24dp">

                <TextView
                    android:id="@+id/tv_text_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_title_home_total_balance"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:drawableEndCompat="@drawable/ic_chevron_down" />

                <ImageView
                    android:id="@+id/iv_more_vert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="189dp"
                    android:layout_marginTop="8dp"
                    android:layout_toRightOf="@id/tv_text_balance"
                    android:src="@drawable/ic_more_vert" />

                <TextView
                    android:id="@+id/tv_total_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_text_balance"
                    android:layout_marginTop="8dp"
                    android:text="@string/text_default_currency"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:visibility="invisible" />

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/sfl_total_balance"
                    android:layout_width="200dp"
                    android:layout_height="25dp"
                    android:layout_below="@+id/tv_text_balance"
                    android:layout_marginTop="16dp"
                    app:shimmer_duration="3000"
                    app:shimmer_intensity="0.7">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_shape_white_default" />

                </com.facebook.shimmer.ShimmerFrameLayout>

                <ImageView
                    android:id="@+id/iv_arrow_down"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_total_balance"
                    android:layout_marginTop="30dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_arrow_down_rounded" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_total_balance"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="30dp"
                    android:layout_toRightOf="@+id/iv_arrow_down"
                    android:text="@string/text_title_income"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_income"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_arrow_down"
                    android:layout_marginTop="8dp"
                    android:text="@string/text_default_currency"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="invisible" />

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/sfl_total_income"
                    android:layout_width="100dp"
                    android:layout_height="25dp"
                    android:layout_below="@+id/iv_arrow_down"
                    android:layout_marginTop="8dp"
                    app:shimmer_duration="3000"
                    app:shimmer_intensity="0.7">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_shape_white_default" />

                </com.facebook.shimmer.ShimmerFrameLayout>

                <TextView
                    android:id="@+id/tv_title_expense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_total_balance"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="30dp"
                    android:text="Expenses"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/iv_arrow_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_total_balance"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="8dp"
                    android:layout_toStartOf="@id/tv_title_expense"
                    android:src="@drawable/ic_arrow_top_rounded" />

                <TextView
                    android:id="@+id/tv_expense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_arrow_up"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/text_default_currency"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/sfl_total_expense"
                    android:layout_width="100dp"
                    android:layout_height="25dp"
                    android:layout_below="@+id/iv_arrow_up"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="8dp"
                    app:shimmer_duration="3000"
                    app:shimmer_intensity="0.7">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_shape_white_default" />

                </com.facebook.shimmer.ShimmerFrameLayout>

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_title_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cv_balance"
            android:layout_marginStart="24dp"
            android:layout_marginTop="30dp"
            android:text="Transaction History"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_see_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cv_balance"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="22dp"
            android:text="See All" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_transactions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tv_title_history"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="24dp"
            android:scrollbars="none"
            tools:itemCount="5"
            tools:listitem="@layout/item_list_transaction_history" />


    </RelativeLayout>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
